added tests for UserCreatedController, modified service logic to avoid lazy initialization and excessive queries